--- a/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
+++ b/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
@@ -32,18 +32,23 @@ static void shrink_active_list(unsigned long nr_to_scan,
 	//申请zone->lru_lock锁来保护LRU链表操作。
 	spin_lock_irq(&zone->lru_lock);
 
+	//isolate_lru_pages()批量地从LRU链表中分离nr_to_scan个页面到l_hold链表中，这里会根据isolate_mode来考虑一些特殊情况，基本上就是把LRU链表的页面迁移到临时l_hold链表中。
 	nr_taken = isolate_lru_pages(nr_to_scan, lruvec, &l_hold,
 				     &nr_scanned, sc, isolate_mode, lru);
 	if (global_reclaim(sc))
+		//增加zone中的NR_PAGES_SCANNED计数。
 		__mod_zone_page_state(zone, NR_PAGES_SCANNED, nr_scanned);
 
+	//增加recent_scanned[]计数，在get_scan_count()计算匿名页面和文件缓存页面分别扫描数量时会用到。
 	reclaim_stat->recent_scanned[file] += nr_taken;
 
+	//增加zone中PGREFILL、NR_LRU_BASE和NR_ISOLATED_ANON计数。
 	__count_zone_vm_events(PGREFILL, zone, nr_scanned);
 	__mod_zone_page_state(zone, NR_LRU_BASE + lru, -nr_taken);
 	__mod_zone_page_state(zone, NR_ISOLATED_ANON + file, nr_taken);
 	spin_unlock_irq(&zone->lru_lock);
 
+	//扫描临时l_hold链表中的页面，有些页面会添加到l_active中，有些会加入到l_inactive中。
 	while (!list_empty(&l_hold)) {
 		cond_resched();
 		page = lru_to_page(&l_hold);
