--- a/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
+++ b/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
@@ -54,6 +54,7 @@ static void shrink_active_list(unsigned long nr_to_scan,
 		page = lru_to_page(&l_hold);
 		list_del(&page->lru);
 
+		//如果页面是不可回收的，那么就把它返回到不可回收的LRU链表上去
 		if (unlikely(!page_evictable(page))) {
 			putback_lru_page(page);
 			continue;
@@ -66,7 +67,10 @@ static void shrink_active_list(unsigned long nr_to_scan,
 				unlock_page(page);
 			}
 		}
-
+		
+		
+		//page_referenced()函数返回该页最近访问引用pte的个数，返回0表示最近没有被访问过。除了可执行的page cache页面，其他被访问的引用的页面（referenced page）为什么都被加入到不活跃链表里，而不是继续待在活跃的LRU链表中。
+		//把最近访问引用的页面全部迁移到活跃的LRU链表会产生一个比较大的可扩展性问题
 		if (page_referenced(page, 0, sc->target_mem_cgroup,
 				    &vm_flags)) {
 			nr_rotated += hpage_nr_pages(page);
