--- a/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
+++ b/kernel/memory/13. 回收页面/5. shrink_active_list函数.md
@@ -70,7 +70,8 @@ static void shrink_active_list(unsigned long nr_to_scan,
 		
 		
 		//page_referenced()函数返回该页最近访问引用pte的个数，返回0表示最近没有被访问过。除了可执行的page cache页面，其他被访问的引用的页面（referenced page）为什么都被加入到不活跃链表里，而不是继续待在活跃的LRU链表中。
-		//把最近访问引用的页面全部迁移到活跃的LRU链表会产生一个比较大的可扩展性问题
+		//把最近访问引用的页面全部迁移到活跃的LRU链表会产生一个比较大的可扩展性问题在一个内存很大的系统中，当系统用完了这些空闲内存时，每个页面都会被访问引用到，这种情况下我们不仅没有时间去扫描活跃LRU链表，而且还重新设置访问比特位（referenced bit)，而这些信息没有什么用处。所以从Linux2.6.28开始，扫描活跃链表时会把页面全部都迁移到不活跃链表中。这里只需要清硬件的访问比特位（page_referenced()来完成），当有访问引用时，扫描不活跃LRU链表就迁移回到活跃LRU链表中。
+		//让可执行的page cache 页面（mapped executable file pages)继续保存在活跃页表中，在扫描活跃链表期间它们可能再次被访问到，因为LRU链表的扫描顺序是先扫描不活跃链表，然后再扫描活跃链表且扫描不活跃链表的速度要快于活跃链表，因此它们可以获得比较多的时间让用户进程再次访问，从而提高用户进程的交互体验。可执行的页面通常是vma的属性中标记着VM_EXEC，这些页面通常包括可执行的文件和它们链接的库文件等。
 		if (page_referenced(page, 0, sc->target_mem_cgroup,
 				    &vm_flags)) {
 			nr_rotated += hpage_nr_pages(page);
@@ -90,6 +91,7 @@ static void shrink_active_list(unsigned long nr_to_scan,
 		}
 
 		ClearPageActive(page);	/* we are de-activating */
+		//如果页面没有被引用，那么加入l_inactive链表。
 		list_add(&page->lru, &l_inactive);
 	}
 
@@ -103,15 +105,145 @@ static void shrink_active_list(unsigned long nr_to_scan,
 	 * helps balance scan pressure between file and anonymous pages in
 	 * get_scan_count.
 	 */
+	//这里把最近被引用的页面（referenced pages）统计到recent_rotated中，以便在下一次扫描时在get_scan_count()中重新计算匿名页面和文件映射页面LRU链表的扫描比重。
 	reclaim_stat->recent_rotated[file] += nr_rotated;
 
+	//把l_inactive和l_active链表的页迁移到LRU相应的链表中。
 	move_active_pages_to_lru(lruvec, &l_active, &l_hold, lru);
 	move_active_pages_to_lru(lruvec, &l_inactive, &l_hold, lru - LRU_ACTIVE);
 	__mod_zone_page_state(zone, NR_ISOLATED_ANON + file, -nr_taken);
 	spin_unlock_irq(&zone->lru_lock);
 
 	mem_cgroup_uncharge_list(&l_hold);
+	//l_hold链表是剩下的页面，表示可以释放。
 	free_hot_cold_page_list(&l_hold, true);
 }
 ```
 
+看下isolate_lru_pages()函数的实现
+
+```
+static unsigned long isolate_lru_pages(unsigned long nr_to_scan,
+		struct lruvec *lruvec, struct list_head *dst,
+		unsigned long *nr_scanned, struct scan_control *sc,
+		isolate_mode_t mode, enum lru_list lru)
+{
+	struct list_head *src = &lruvec->lists[lru];
+	unsigned long nr_taken = 0;
+	unsigned long scan;
+
+	//调用__isolate_lru_page()来分离页面，返回0，则表示分离成功，并且把页面迁移到dst临时链表中。
+	for (scan = 0; scan < nr_to_scan && !list_empty(src); scan++) {
+		struct page *page;
+		int nr_pages;
+
+		page = lru_to_page(src);
+		prefetchw_prev_lru_page(page, src, flags);
+
+		VM_BUG_ON_PAGE(!PageLRU(page), page);
+		
+		switch (__isolate_lru_page(page, mode)) {
+		case 0:
+			nr_pages = hpage_nr_pages(page);
+			mem_cgroup_update_lru_size(lruvec, lru, -nr_pages);
+			list_move(&page->lru, dst);
+			nr_taken += nr_pages;
+			break;
+
+		case -EBUSY:
+			/* else it is being freed elsewhere */
+			list_move(&page->lru, src);
+			continue;
+
+		default:
+			BUG();
+		}
+	}
+
+	*nr_scanned = scan;
+	trace_mm_vmscan_lru_isolate(sc->order, nr_to_scan, scan,
+				    nr_taken, mode, is_file_lru(lru));
+	return nr_taken;
+}
+```
+
+isolate_lru_pages()用于分离LRU链表中页面的函数。参数nr_to_scan表示在这个链表中扫描页面的个数，lruvec是LRU链表集合，dst是临时存放的链表，nr_scanned是已经扫描的页面的个数，sc是页面回收的控制数据结构 struct scan_control，mode是分离LRU的模式。
+
+```
+[shrink_active_1ist()->isolate_1ru_pages()->__isolate_lru_page()]
+int __isolate_lru_page(struct page *page, isolate_mode_t mode)
+{
+	int ret = -EINVAL;
+
+	/* Only take pages on the LRU. */
+	//判断page是否在LRU链表中。
+	if (!PageLRU(page))
+		return ret;
+
+	/* Compaction should not handle unevictable pages but CMA can do so */
+	//如果page是不可回收的且mode不等于ISOLATE_UNEVICTABLE，则返回-EINVAL。
+	if (PageUnevictable(page) && !(mode & ISOLATE_UNEVICTABLE))
+		return ret;
+
+	ret = -EBUSY;
+
+	/*
+	 * To minimise LRU disruption, the caller can indicate that it only
+	 * wants to isolate pages it will be able to operate on without
+	 * blocking - clean pages for the most part.
+	 *
+	 * ISOLATE_CLEAN means that only clean pages should be isolated. This
+	 * is used by reclaim when it is cannot write to backing storage
+	 *
+	 * ISOLATE_ASYNC_MIGRATE is used to indicate that it only wants to pages
+	 * that it is possible to migrate without blocking
+	 */
+	 //分离ISOLATE_CLEAN和ISOLATE_ASYNC_MIGRATE情况的页面
+	if (mode & (ISOLATE_CLEAN|ISOLATE_ASYNC_MIGRATE)) {
+		/* All the caller can do on PageWriteback is block */
+		if (PageWriteback(page))
+			return ret;
+
+		if (PageDirty(page)) {
+			struct address_space *mapping;
+
+			/* ISOLATE_CLEAN means only clean pages */
+			if (mode & ISOLATE_CLEAN)
+				return ret;
+
+			/*
+			 * Only pages without mappings or that have a
+			 * ->migratepage callback are possible to migrate
+			 * without blocking
+			 */
+			mapping = page_mapping(page);
+			if (mapping && !mapping->a_ops->migratepage)
+				return ret;
+		}
+	}
+	
+	//如果mode是ISOLATE_UNMAPPED，但page有mapped，则那么返回-EBUSY。
+	if ((mode & ISOLATE_UNMAPPED) && page_mapped(page))
+		return ret;
+
+	//get_page_unless_zero()是为page->_count引用计数加1，并且判断加1之后是否等于0，也就是说，这个page不能为空闲页面，否则返回-EBUSY
+	if (likely(get_page_unless_zero(page))) {
+		/*
+		 * Be careful not to clear PageLRU until after we're
+		 * sure the page is not being freed elsewhere -- the
+		 * page release code relies on it.
+		 */
+		ClearPageLRU(page);
+		ret = 0;
+	}
+
+	return ret;
+}
+```
+
+分离页面有如下4种类型。
+
+- ISOLATE_CLEAN：分离干净的页面。
+- ISOLATE_UNMAPPED：分离没有映射的页面。
+- ISOLATE_ASYNC_MIGRATE：分离异步合并的页面。
+- ISOLATE_UNEVICTABLE：分离不可回收的页面。
