--- a/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
+++ b/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
@@ -282,6 +282,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 *    pages are in writeback and there is nothing else to
 		 *    reclaim. Wait for the writeback to complete.
 		 */
+		 //如果page有PG_PageWriteback标志位，说明page正在往磁盘里面回写。这时最好让page继续保持在不活跃状态。考虑到原版的内核代码块设备回写的效率问题，这里的代码被简化了。在Linux3.11之前的内核，许多用户抱怨大文件复制或备份的操作会导致系统宕机或应用被swap出去。有时内存短缺的情况下，突然有大量的内存要被回收，而有时应用程序或kswapd线程的CPU占用率长时间为100%。因此，Linux3.11以后的内核对此进行了优化，对于回写状态的页面会被统计，如果shrink_page_list()扫描一轮之后发现有大量处于回写状态的页面，则会设置zone->flag中的ZONE_WRITEBACK标志位。在下一轮扫描时，如果kswapd内核线程还遇到回写页面，那么就认为LRU扫描速度比页面I0回写速度快，这时会强制让kswapd睡眠等待100毫秒(congestion_wait(BLK_RW_ASYNC,HZ/10))。
 		if (PageWriteback(page)) {
 			/* Case 1 above */
 			if (current_is_kswapd() &&
