--- a/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
+++ b/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
@@ -317,8 +317,16 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		}
 
 		if (!force_reclaim)
+		//page_check_references()函数计算该页访问引用pte的用户数，并返回page_references状态，该函数在上文已经介绍过，简单归纳如下：
+		//(1)如果有访问引用pte
+		// - 该页是匿名页面（PageSwapBacked(page)），则加入活跃链表。
+		// - 最近第二次访问的page cache或共享的page cache，则加入活跃链表。
+		// - 可执行文件page cache，则加入活跃链表。
+		// - 除了上述三种情况，其余情况继续保留在不活跃的链表
+		//（2）如果没有访问引用pte，则表示可以尝试回收。
 			references = page_check_references(page, sc);
-
+		
+		
 		switch (references) {
 		case PAGEREF_ACTIVATE:
 			goto activate_locked;
