--- a/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
+++ b/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
@@ -239,6 +239,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * pages marked for immediate reclaim are making it to the
 		 * end of the LRU a second time.
 		 */
+		 //page分配了交换空间后，page->mapping指向发生变化，由原来指向匿名页面的anon_vma数据结构变成了交换分区的swapper_spaces。
 		mapping = page_mapping(page);
 		if (((dirty || writeback) && mapping &&
 		     bdi_write_congested(inode_to_bdi(mapping->host))) ||
@@ -341,6 +342,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * Anonymous process memory has backing store?
 		 * Try to allocate it some swap space here.
 		 */
+		 //!PageSwapCache(page)说明page还没有分配交换空间（swap space)，那
 		if (PageAnon(page) && !PageSwapCache(page)) {
 			if (!(sc->gfp_mask & __GFP_IO))
 				goto keep_locked;
