--- a/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
+++ b/kernel/memory/13. 回收页面/6. shrink_inactive_list.md
@@ -342,7 +342,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * Anonymous process memory has backing store?
 		 * Try to allocate it some swap space here.
 		 */
-		 //!PageSwapCache(page)说明page还没有分配交换空间（swap space)，那
+		 //!PageSwapCache(page)说明page还没有分配交换空间（swap space)，那么调用add_to_swap()函数为其分配交换空间，并且设置该页的标志位PG_swapcache
 		if (PageAnon(page) && !PageSwapCache(page)) {
 			if (!(sc->gfp_mask & __GFP_IO))
 				goto keep_locked;
@@ -351,6 +351,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 			may_enter_fs = 1;
 
 			/* Adding to swap updated mapping */
+			//page分配了交换空间后，page->mapping指向发生变化，由原来的指向匿名页面的anon_vma数据结构变成交换空间的swapper_spaces。
 			mapping = page_mapping(page);
 		}
 
@@ -358,6 +359,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * The page is mapped into the page tables of one or more
 		 * processes. Try to unmap it here.
 		 */
+		 //page有多个用户映射（page>_mapcount>=0)且mapping 指向 address_space,那么调用try_to_unmap()来解除这些用户映射的PTEs。函数返回SWAP_FAIL，说明解除pte失败，该页将迁移到活跃LRU中。返回SWAP_AGAIN，说明有的pte被漏掉了，保留在不活跃LRU链表中，下一次继续扫描。返回SWAP_SUCCESS，说明已经成功解除了所有PTEs映射了。
 		if (page_mapped(page) && mapping) {
 			switch (try_to_unmap(page, ttu_flags)) {
 			case SWAP_FAIL:
@@ -370,7 +372,8 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 				; /* try to free the page below */
 			}
 		}
-
+		//处理脏页的情况。
+		//- 如果是文件映射页面，则设置page为PG_reclaim且继续保持在不活跃的LRU中。在kswapd内核线程中进行一个页面回写的做法不可取。早前的Linux内核这样做是因为向存储设备中回写页面内容的速度比CPU慢很多数量级。目前的做法是kswapd内核线程不会对零星的几个page cache页面进行回写，除非遇到之前有很多还没有开始回写的脏页面。当扫描完一轮后，发现有好多脏的page cache还没有来得及加入到回写子系统中（writeback subsystem），那么设置ZONE_DIRTY比特位，表示kswapd可以回写脏页面，否则一般情况下kswapd 不回写脏的page cache。
 		if (PageDirty(page)) {
 			/*
 			 * Only kswapd can writeback filesystem pages to
@@ -400,6 +403,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 				goto keep_locked;
 
 			/* Page is dirty, try to write it out here */
+			//如果是匿名页面，那么调用pageout()函数进行写入交换分区。pageout()函数有4个返回值，PAGE_KEEP表示回写page失败，PAGE_ACTIVATE表示page 需要迁移回到活跃LRU链表中，PAGE_SUCCESS表示page已经成功写入存储设备，PAGE_CLEAN表示page已经干净，可以被释放了。
 			switch (pageout(page, mapping, sc)) {
 			case PAGE_KEEP:
 				goto keep_locked;
@@ -446,6 +450,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * process address space (page_count == 1) it can be freed.
 		 * Otherwise, leave the page on the LRU so it is swappable.
 		 */
+		 //__remove_mapping()尝试分离page->mapping。程序运行到这里，说明page已经完成了大部分回收的工作，首先会妥善处理page的_count引用计数，见page_freeze_refs()函数；其次是分离page->mapping。对于匿名页面，即PG_SwapCache有置位的页面，__delete_from_swap_cache()处理swap cache相关问题。对于page cache，调用 __delete_from_page_cache0和mapping->a_ops->freepage()处理相关问题。
 		if (page_has_private(page)) {
 			if (!try_to_release_page(page, sc->gfp_mask))
 				goto activate_locked;
@@ -467,6 +472,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 			}
 		}
 
+		//清除page的PG_lock锁。
 		if (!mapping || !__remove_mapping(mapping, page, true))
 			goto keep_locked;
 
@@ -478,6 +484,7 @@ static unsigned long shrink_page_list(struct list_head *page_list,
 		 * waiting on the page lock, because there are no references.
 		 */
 		__clear_page_locked(page);
+		//free_it 标签处统计已经回收好的页面数量nr_reclaimed，将这些要释放的页面加入free_pages链表中。
 free_it:
 		nr_reclaimed++;
 
@@ -494,7 +501,7 @@ cull_mlocked:
 		unlock_page(page);
 		putback_lru_page(page);
 		continue;
-
+//activate_locked标签处表示页面不能回收，需要重新返回活跃LRU链表。
 activate_locked:
 		/* Not a candidate for swapping, so reclaim swap space. */
 		if (PageSwapCache(page) && vm_swap_full())
@@ -504,6 +511,7 @@ activate_locked:
 		pgactivate++;
 keep_locked:
 		unlock_page(page);
+		//keep标签处表示让页面继续保持在不活跃LRU链表中。
 keep:
 		list_add(&page->lru, &ret_pages);
 		VM_BUG_ON_PAGE(PageLRU(page) || PageUnevictable(page), page);
