--- a/kernel/memory/13. 回收页面/7. 跟踪LRU活动情况.md
+++ b/kernel/memory/13. 回收页面/7. 跟踪LRU活动情况.md
@@ -1,1 +1,26 @@
 如果在LRU链表中，页面被其他的进程释放了，那么LRU链表如何知道页面已经被释放了?
+
+LRU只是一个双向链表，如何保护链表中的成员不被其他内核路径释放是在设计页面回收功能需要考虑的并发问题。在这个过程中，struct page数据结构中的_count引用计数起到重要的作用。
+
+以shrink_active_list()中分离页面到临时链表l_hold为例。
+
+```
+shrink_active_list() 
+	->isolate_lru pages() 
+		->page = 1ru_to_page()从LRU链表中摘取一个页面 
+			->get_page_unless_zero(page) 对page->_count引用计数加1 
+				->ClearPageLRU(page)清除PG_LRU标志位
+```
+
+这样从LRU链表中摘取一个页面时，对该页的page->_count引用计数加1。
+
+把分离好的页面放回LRU链表的情况如下。
+
+```
+shrink_active_list() 
+	->move_active_pages_to_lru() 
+		->list_move(&page->lru,&lruvec->lists[lru])；把该页面添加回到LRU链表 
+			->put_page_testzero(page)
+```
+
+这里对page->_count计数减1，如果减1等于0，说明这个page已经被其他进程释放了，清除PG_LRU并从LRU链表删除该页。
