--- a/kernel/memory/13. 回收页面/8. Refault Distance算法.md
+++ b/kernel/memory/13. 回收页面/8. Refault Distance算法.md
@@ -14,3 +14,19 @@
 - 要从不活跃链表中释放一个页面，需要移动N个页面（N=不活跃链表长度）。
 
 综合上面的一些行为特征，定义了Refault Distance的概念。第一次访问 page cache称为fault，第二次访问该页称为refault。page cache页面第一次被踢出LRU链表并回收（eviction）的时刻称为E，第二次再访问该页的时刻称为R，那么R-E的时间里需要移动的页面个数称为Refault Distance。
+
+把Refault Distance概念再加上第一次读的时刻，可以用一个公式来概括第一次和第二次读之间的距离（read_distance)。
+
+```
+read_distance=nr_inactive+(R-E)
+```
+
+如果page想一直保持在LRU链表中，那么read distance不应该比内存的大小还长，否则该page永远都会被踢出LRU链表。因此公式可以推导为：
+
+```
+NR_inactive +(R-E)≤NR_inactive+NR_active 
+(R-E)≤NR_active
+```
+
+换句话说，Refault Distance可以理解为不活跃链表的“财政赤字”，如果不活跃链表的长度至少再延长到Refault Distance，那么就可以保证该page cache 在第二次读之前不会被踢出LRU链表并释放内存，否则就要把该page cache重新加入活跃链表加以保护，以防内存颠簸。在理想情况下，page cache的平均访问距离要大于不活跃链表，小于总的内存大小。
+
