--- a/kernel/memory/14. 匿名页面的生命周期/1. 匿名页面的诞生.md
+++ b/kernel/memory/14. 匿名页面的生命周期/1. 匿名页面的诞生.md
@@ -18,3 +18,13 @@
 3. do_swap_page()，从swap分区读回数据时会新分配匿名页面。
 4. 迁移页面。
 
+- do_anonymous_page()分配一个匿名页面 anon page为例, anon page刚分配时的状态如下:
+
+```
+page->count=1.
+page->mapcount =0 
+设置PG_swaybacked标志位 
+加入LRU_ACTIVE_ANON链表中,并设置PG_lru标志位。
+page->mapping指向MA中的 anon_vma数据结构
+```
+
