--- a/kernel/memory/14. 匿名页面的生命周期/2. 匿名页面的换出.md
+++ b/kernel/memory/14. 匿名页面的生命周期/2. 匿名页面的换出.md
@@ -13,3 +13,54 @@ page->flags = [PG_lru| PG_swapbacked | PG_swapcache | PG_dirty | PG_uptodate | P
 ```
 
 为什么add_to_swap()之后page->_count变成了3呢？因为在分离LRU链表时该引用计数加1了，另外add_to_swap()本身也会让该引用计数加1。
+
+add_to_swap()还会增加若干个page的标志位，PG_swapcache表示该页已经分配了swap空间，PG_dirty表示该页为脏的，稍后需要把内容写回swap分区，PG_uptodate表示该页的数据是有效的。
+
+（2）shrink_page_list()->try_to_unmap()后该匿名页面的状态如下：
+
+```
+page->_count=2 
+page->_mapcount=-1
+```
+
+try_to_unmap()函数会通过RMAP反向映射系统去寻找映射该页的所有的VMA和相应的pte，并将这些pte解除映射。因为该页只和父进程建立了映射关系，因此\_count和\_mapcount 都要减1，_mapcount变成一1表示没有PTE映射该页。
+
+（3）shrink_page_list()->pageout)函数把该页写回交换分区，此时匿名页面的状态如下：
+
+```
+page->_count=2 
+page->_mapcount=-1 
+page->flags=[PG_1ru l PG_swapbacked | PG_swapcache | PG_uptodate | PG_reclaim | PG_writeback]
+```
+
+ pageout()函数的作用如下。
+
+- 检查该页面是否可以释放，见is page_cache_fteeableO函数。
+- 清PG_dirty标志位。
+- 设置PG_reclaim标志位。
+- swap_writepage()设置PG_writeback标志位，清PG_locked，向swap分区写内容。
+
+在向swap分区写内容时，kswapd不会一直等到该页面写完成的，所以该页将继续返回到不活跃LRU链表的头部。
+
+（4）第二次扫描不活跃链表。
+
+经历一次不活跃LRU链表的移动过程，从链表头移动到链表尾。如果这时该页还没有写入完成，即PG_writeback标志位还在，那么该页会继续被放回到不活跃LRU链表头，kswapd会继续扫描其他页，从而继续等待写完成。
+
+我们假设第二次扫描不活跃链表时，该页写入swap分区已经完成。Block layer层的回调函数end_swap_bio_write()->end_page_writeback()会完成如下动作。
+
+- 清PG writeback标志位。
+- 唤醒等待在该页PG_writeback的线程，见wake_up_page(page,PG_writeback)函数。
+
+shrink page_list()->__remove_mapping()函数的作用如下。
+
+- page_freeze_refs(page,2)判断当前 page->_count是否为2，并且将该计数设置为0。
+- 清PG swapcache标志位。
+- 清PG_locked标志位。
+
+```
+page->_count=0
+page->_mapcount=-1
+page->flags=[PG_uptodate | PG_swapbacked]
+```
+
+最后把page加入free_page链表中，释放该页。因此该anon page页的状态是页面内容已经写入swap分区，实际物理页面已经释放。
