--- a/kernel/memory/15. 页面迁移/1.页面迁移.md
+++ b/kernel/memory/15. 页面迁移/1.页面迁移.md
@@ -149,5 +149,154 @@ out:
 
 具体实现页的迁移是在__unmap_and_move()函数中，返回MIGRATEPAGE_SUCCESS表示迁移成功。
 
+```
+[migrate_pages()->unmap_and_move()->_unmap_and_move()]
 
+static int __unmap_and_move(struct page *page, struct page *newpage,
+				int force, enum migrate_mode mode)
+{
+	int rc = -EAGAIN;
+	int page_was_mapped = 0;
+	struct anon_vma *anon_vma = NULL;
+
+	//trylock_page()尝试给page加锁，trylock_page()返回false，表示已经有别的进程给page加过锁，返回true表示当前进程可以成功获取锁。
+	//如果尝试获取页面锁不成功，当前不是强制迁移（force=0）或迁移模式等于异步（mode=MIGRATE_ASYNC),会直接忽略这个page，因为这种情况下没有必要睡眠等待页面释放页锁。
+	//如果当前进程设置了PF_MEMALLOC标志位，表示可能是在直接内存压缩（direct compaction)的内核路径上，睡眠等待页面锁是不安全的，所以直接忽略page。举个例子，在文件预读中，预读的所有页面都会加页锁（PG_lock)并添加到LRU链表中，等到预读完成后，这些页面会标记PG_uptodate并释放页锁，这个过程中块设备层会把多个页面合并到一个BIO中（mpage_readpages（))。如果在分配第2或者第3个页面时发生内存短缺，内核会运行到直接内存压缩（direct compaction)内核路径上，导致一个页面已经加锁了又去等待这个锁，产生死锁，因此在直接内存压缩（direct compaction)的内核路径会标记PF_MEMALLOC。
+    //PF_MEMALLOC标志位一般是在直径内存压缩、直接内存回收和kswapd中设置，这些场景下也可能会有少量的内存分配行为，因此设置PF_MEMALLOC标志位，表示允许它们使用系统预留的内存，即不用考虑Water Mark水位。可以参见perform_reclaim)、alloc pages direct_compact()和kswapd)等函数。
+    //除了上述情况，其余情况只能调用lock_page()函数来等待页面锁被释放可以体会到trylock_page()和lock_page()这两个函数的区别。
+	if (!trylock_page(page)) {
+		if (!force || mode == MIGRATE_ASYNC)
+			goto out;
+
+		/*
+		 * It's not safe for direct compaction to call lock_page.
+		 * For example, during page readahead pages are added locked
+		 * to the LRU. Later, when the IO completes the pages are
+		 * marked uptodate and unlocked. However, the queueing
+		 * could be merging multiple pages for one bio (e.g.
+		 * mpage_readpages). If an allocation happens for the
+		 * second or third page, the process can end up locking
+		 * the same page twice and deadlocking. Rather than
+		 * trying to be clever about what pages can be locked,
+		 * avoid the use of lock_page for direct compaction
+		 * altogether.
+		 */
+		if (current->flags & PF_MEMALLOC)
+			goto out;
+
+		lock_page(page);
+	}
+
+	//处理正在回写的页面即PG_writeback标志位的页面，这里只有当页面迁移的模式为MIGRATE_SYNC且设置强制迁移(force = 1)时才会去等待这个页面回写完成，否则直接忽略该页面。wait_on_page_writeback()会等待页面回写完成。
+	if (PageWriteback(page)) {
+		/*
+		 * Only in the case of a full synchronous migration is it
+		 * necessary to wait for PageWriteback. In the async case,
+		 * the retry loop is too short and in the sync-light case,
+		 * the overhead of stalling is too much
+		 */
+		if (mode != MIGRATE_SYNC) {
+			rc = -EBUSY;
+			goto out_unlock;
+		}
+		if (!force)
+			goto out_unlock;
+		wait_on_page_writeback(page);
+	}
+	/*
+	 * By try_to_unmap(), page->mapcount goes down to 0 here. In this case,
+	 * we cannot notice that anon_vma is freed while we migrates a page.
+	 * This get_anon_vma() delays freeing anon_vma pointer until the end
+	 * of migration. File cache pages are no problem because of page_lock()
+	 * File Caches may use write_page() or lock_page() in migration, then,
+	 * just care Anon page here.
+	 */
+	 //
+	if (PageAnon(page) && !PageKsm(page)) {
+		/*
+		 * Only page_lock_anon_vma_read() understands the subtleties of
+		 * getting a hold on an anon_vma from outside one of its mms.
+		 */
+		anon_vma = page_get_anon_vma(page);
+		if (anon_vma) {
+			/*
+			 * Anon page
+			 */
+		} else if (PageSwapCache(page)) {
+			/*
+			 * We cannot be sure that the anon_vma of an unmapped
+			 * swapcache page is safe to use because we don't
+			 * know in advance if the VMA that this page belonged
+			 * to still exists. If the VMA and others sharing the
+			 * data have been freed, then the anon_vma could
+			 * already be invalid.
+			 *
+			 * To avoid this possibility, swapcache pages get
+			 * migrated but are not remapped when migration
+			 * completes
+			 */
+		} else {
+			goto out_unlock;
+		}
+	}
+
+	if (unlikely(isolated_balloon_page(page))) {
+		/*
+		 * A ballooned page does not need any special attention from
+		 * physical to virtual reverse mapping procedures.
+		 * Skip any attempt to unmap PTEs or to remap swap cache,
+		 * in order to avoid burning cycles at rmap level, and perform
+		 * the page migration right away (proteced by page lock).
+		 */
+		rc = balloon_page_migrate(newpage, page, mode);
+		goto out_unlock;
+	}
+
+	/*
+	 * Corner case handling:
+	 * 1. When a new swap-cache page is read into, it is added to the LRU
+	 * and treated as swapcache but it has no rmap yet.
+	 * Calling try_to_unmap() against a page->mapping==NULL page will
+	 * trigger a BUG.  So handle it here.
+	 * 2. An orphaned page (see truncate_complete_page) might have
+	 * fs-private metadata. The page can be picked up due to memory
+	 * offlining.  Everywhere else except page reclaim, the page is
+	 * invisible to the vm, so the page can not be migrated.  So try to
+	 * free the metadata, so the page can be freed.
+	 */
+	if (!page->mapping) {
+		VM_BUG_ON_PAGE(PageAnon(page), page);
+		if (page_has_private(page)) {
+			try_to_free_buffers(page);
+			goto out_unlock;
+		}
+		goto skip_unmap;
+	}
+
+	/* Establish migration ptes or remove ptes */
+	if (page_mapped(page)) {
+		try_to_unmap(page,
+			TTU_MIGRATION|TTU_IGNORE_MLOCK|TTU_IGNORE_ACCESS);
+		page_was_mapped = 1;
+	}
+
+skip_unmap:
+	if (!page_mapped(page))
+		rc = move_to_new_page(newpage, page, page_was_mapped, mode);
+
+	if (rc && page_was_mapped)
+		remove_migration_ptes(page, page);
+
+	/* Drop an anon_vma reference if we took one */
+	if (anon_vma)
+		put_anon_vma(anon_vma);
+
+out_unlock:
+	unlock_page(page);
+out:
+	return rc;
+}
+```
+
+在migrate_page()中，当尝试次数大于2时，会设置force=1；
 
