--- a/kernel/memory/15. 页面迁移/1.页面迁移.md
+++ b/kernel/memory/15. 页面迁移/1.页面迁移.md
@@ -211,7 +211,7 @@ static int __unmap_and_move(struct page *page, struct page *newpage,
 	 * File Caches may use write_page() or lock_page() in migration, then,
 	 * just care Anon page here.
 	 */
-	 //处理匿名页面的anon_vma可能被释放的特殊情况，因为接下来try_to_unmap()函数执行完成时，
+	 //处理匿名页面的anon_vma可能被释放的特殊情况，因为接下来try_to_unmap()函数执行完成时，page->mapcount会变成0，在页迁移过程中，我们无法知道anon_vma数据结构是否被释放掉了。page_get_anon_vma()会增加anon_vma->refcount引用计数防止它被其他进程释放，与之对应的是put_anon_vma()减少anno_vma->refcount引用计数，它们是成对出现的。
 	if (PageAnon(page) && !PageKsm(page)) {
 		/*
 		 * Only page_lock_anon_vma_read() understands the subtleties of
