--- a/kernel/memory/15. 页面迁移/1.页面迁移.md
+++ b/kernel/memory/15. 页面迁移/1.页面迁移.md
@@ -264,6 +264,8 @@ static int __unmap_and_move(struct page *page, struct page *newpage,
 	 * invisible to the vm, so the page can not be migrated.  So try to
 	 * free the metadata, so the page can be freed.
 	 */
+	 
+	 //这里是处理一种特殊情况，例如一个swap cache页面发生swap-in时，在do_swap_page()分配一个新的页面，该页面会添加到LRU链表中，这个页面是swapcache页面。但是它还没有建立RMAP关系，因此page->mapping=NULL,接下来进行的try_to_unmap()函数处理这种页面会触发bug
 	if (!page->mapping) {
 		VM_BUG_ON_PAGE(PageAnon(page), page);
 		if (page_has_private(page)) {
@@ -274,6 +276,7 @@ static int __unmap_and_move(struct page *page, struct page *newpage,
 	}
 
 	/* Establish migration ptes or remove ptes */
+	//对于有pte映射的页面，调用try_to_unmap()解除页面所有映射的pte。try_to_unmap()函数定义在mm/rmap.c文件中。
 	if (page_mapped(page)) {
 		try_to_unmap(page,
 			TTU_MIGRATION|TTU_IGNORE_MLOCK|TTU_IGNORE_ACCESS);
@@ -281,9 +284,11 @@ static int __unmap_and_move(struct page *page, struct page *newpage,
 	}
 
 skip_unmap:
+	//对于已经解除完所有映射的页面，调用move_to new_page()迁移到新分配的页面new_page。
 	if (!page_mapped(page))
 		rc = move_to_new_page(newpage, page, page_was_mapped, mode);
 
+	//对于迁移页面失败，调用remove_migration_ptes()删掉迁移的pte。
 	if (rc && page_was_mapped)
 		remove_migration_ptes(page, page);
 
@@ -299,4 +304,69 @@ out:
 ```
 
 在migrate_page()中，当尝试次数大于2时，会设置force=1；
+
+看看137行的move_to_new_page()函数。
+
+```
+
+/*
+ * Move a page to a newly allocated page
+ * The page is locked and all ptes have been successfully removed.
+ *
+ * The new page will have replaced the old page if this function
+ * is successful.
+ *
+ * Return value:
+ *   < 0 - error code
+ *  MIGRATEPAGE_SUCCESS - success
+ */
+static int move_to_new_page(struct page *newpage, struct page *page,
+				int page_was_mapped, enum migrate_mode mode)
+{
+	struct address_space *mapping;
+	int rc;
+
+	/*
+	 * Block others from accessing the page when we get around to
+	 * establishing additional references. We are the only one
+	 * holding a reference to the new page at this point.
+	 */
+	if (!trylock_page(newpage))
+		BUG();
+
+	/* Prepare mapping for the new page.*/
+	newpage->index = page->index;
+	newpage->mapping = page->mapping;
+	if (PageSwapBacked(page))
+		SetPageSwapBacked(newpage);
+
+	mapping = page_mapping(page);
+	if (!mapping)
+		rc = migrate_page(mapping, newpage, page, mode);
+	else if (mapping->a_ops->migratepage)
+		/*
+		 * Most pages have a mapping and most filesystems provide a
+		 * migratepage callback. Anonymous pages are part of swap
+		 * space which also has its own migratepage callback. This
+		 * is the most common path for page migration.
+		 */
+		rc = mapping->a_ops->migratepage(mapping,
+						newpage, page, mode);
+	else
+		rc = fallback_migrate_page(mapping, newpage, page, mode);
+
+	if (rc != MIGRATEPAGE_SUCCESS) {
+		newpage->mapping = NULL;
+	} else {
+		mem_cgroup_migrate(page, newpage, false);
+		if (page_was_mapped)
+			remove_migration_ptes(page, newpage);
+		page->mapping = NULL;
+	}
+
+	unlock_page(newpage);
+
+	return rc;
+}
+```
 
